update mcmmo mappings for death messages